--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^0.19.0",
     "chart.js": "^2.9.2",
     "core-js": "^3.3.2",
+    "es6-promise": "^4.2.8",
     "moment": "^2.24.0",
     "pusher-js": "^5.0.2",
     "vue": "^2.6.10",
-    "vue-chartjs": "^3.5.0"
+    "vue-chartjs": "^3.5.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
