--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pusher-js": "^5.0.2",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
+    "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
