--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,7 @@
   "presets": [
       "env",
       "stage-0"
-  ]
+  ], "plugins": [["transform-runtime",
+     { "polyfill": false, "regenerator": true }
+     ]]  
 }
