--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "webpack-dev-server --open"
   },
   "dependencies": {
+    "@babel/runtime": "^7.7.4",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.1.0",
     "chart.js": "^2.9.3",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-vue": "^2.0.2",
