--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
     "vue-echarts": "^4.0.4",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.1"
   },
