--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^2.9.2",
     "core-js": "^3.3.2",
     "es6-promise": "^4.2.8",
+    "mdbvue": "^6.1.1",
     "moment": "^2.24.0",
     "pusher-js": "^5.0.2",
     "vue": "^2.6.10",
